# ragent-forge

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml
benchmarks/: README.md  __init__.py  context_selection_screen.py  direction_confirmation.py  direction_confirmation_manifest_e4a.json  e4b_heldout_manual_review.json  finalize_e4b_heldout.py  fragment_packing_confirmation.py  fragment_packing_confirmation_manifest_e4b.json  fragment_packing_development.py  fragment_packing_development_manifest_e4b.json  generate_e4b_heldout.py  generate_e4b_heldout_manifest.json  prepared_retrieval.py  prepared_retrieval_manifest.json  retrieval_baseline.py  retrieval_baseline_manifest.json  retrieval_screen.py  retrieval_screen_manifest_e1.json
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  DEMO_SCRIPT.md  DEMO_SCRIPT.zh-CN.md  PDF_INGESTION_DESIGN.md  PDF_INGESTION_DESIGN.zh-CN.md  PORTFOLIO_SUMMARY.md  PORTFOLIO_SUMMARY.zh-CN.md  PROJECT_WALKTHROUGH.md  PROJECT_WALKTHROUGH.zh-CN.md  RELEASE_NOTES_V0_1.md  RELEASE_NOTES_V0_1.zh-CN.md  RELEASE_NOTES_V0_1_3.md  RELEASE_NOTES_V0_1_ALPHA_1.md  RELEASE_NOTES_V0_1_ALPHA_1.zh-CN.md  RELEASE_NOTES_V0_2.md  RELEASE_NOTES_V0_2.zh-CN.md  RETRIEVAL_EVALUATION.md  RETRIEVAL_EVALUATION.zh-CN.md  STRUCTURED_INGESTION_DEMO.md  STRUCTURED_INGESTION_DEMO.zh-CN.md  STRUCTURED_INGESTION_DESIGN.md  STRUCTURED_INGESTION_DESIGN.zh-CN.md  TUI_COMMAND_SHELL_DESIGN.md  TUI_COMMAND_SHELL_DESIGN.zh-CN.md  V0_1_SCOPE.md  V0_1_SCOPE.zh-CN.md  V0_2_DEMO_RESULTS.md  V0_2_DEMO_RESULTS.zh-CN.md  V0_3_ARCHITECTURE_CONVERGENCE.md  V0_3_ARCHITECTURE_CONVERGENCE.zh-CN.md  architecture.md  project_positioning.md  project_positioning.zh-CN.md  related_projects.md  related_projects.zh-CN.md  roadmap.md  roadmap.zh-CN.md
ideas/: 2026-07-11-unified-retrieval-typed-sources.md  2026-07-11-v0-2-retrieval-baseline.md  2026-07-11-v0-3-retrieval-research-order.md  README.md  _template.md  (+19 more)
(+295 files in other folders)
